unpackaged/objects/Beat_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Latitude__c</fullName>
        <label>End Latitude</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Longitude__c</fullName>
        <label>End Longitude</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Latitude_Longitude_History__c</fullName>
        <label>Latitude Longitude History</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sequence_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sequence Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Latitude__c</fullName>
        <label>Start Latitude</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Longitude__c</fullName>
        <label>Start Longitude</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Beat_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Beat Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>B-{00000}</displayFormat>
        <label>Beat Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Beat Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>